# tresor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
deb/: config.toml
deb/files/etc/sudoers.d/: tresor
deb/files/etc/tresor/: config.toml
deb/files/lib/systemd/system/: tresor.service
deb/srv/DEBIAN/: postinst  postrm  prerm
sql/: schema.sql
src/: age.rs  api.rs  cli.rs  config.rs  enc.rs  identity.rs  lib.rs  model.rs  srv.rs
src/api/: bytes.rs  claim.rs  env.rs  error.rs  identity.rs  message.rs  mod.rs  publish.rs  secret.rs  server.rs  session.rs
src/cli/: env.rs  error.rs  identity.rs  mod.rs  secret.rs  session.rs
src/identity/: core.rs  mod.rs  software.rs
src/srv/: app.rs  claim.rs  env.rs  identity.rs  mod.rs  publish.rs  secret.rs  session.rs
